# MaxText

./: CMakeLists.txt  LettersObj2.hpp  MaxTest.cpp  README.md
TextEngine/: LettersObj.cpp  LettersObj.hpp  Text.hpp  test.hpp
TextEngine/Data/Shaders/11 Lighting/01 Rendering a geometry with vertex diffuse lighting/: a.spv  b.spv  c.spv  shader.frag  shader.geo  shader.geom  shader.vert
